Remove unnecessary .gitignore comments

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # Ignore system-specific or sensitive files
-*.swp              # Vim swap files
-.history           # Shell history files
-.cache/            # Cache directories
-*.log              # Log files
-__pycache__/       # Python cache
-node_modules/      # Node.js modules
+*.swp
+.history
+.cache/
+*.log
+__pycache__/
+node_modules/
 
 # Ignore specific local-only dotfiles
-.secrets           # Sensitive environment files
-*.bak              # Backup files
-.idea/             # JetBrains IDE configs
-.vscode/           # VS Code workspace settings
+.secrets
+*.bak
+.idea/
+.vscode/
 
 # Ignore GNU Stow symlinked directories
-*/stow-backups/    # Prevent Stow backup directories
+*/stow-backups/
